--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "https://github.com/m1k431",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-react-app": "^3.1.2",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "express": "^4.16.3",
