--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
+    "presets": ["env"],
     "plugins": [
-      "transform-react-pug",
-      "transform-react-jsx"
-    ]
+        "transform-react-pug",
+        "transform-react-jsx"
+      ]
   }
