--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-react-app": "^3.1.2",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
+    "eslint-plugin-react": "^7.11.1",
     "express": "^4.16.3",
     "express-minify": "^1.0.0",
     "express-session": "^1.15.6",
