--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": ".eslintrc.js",
   "scripts": {
     "test": "jest",
-    "build": "npx babel --watch ./public/js/src --out-dir ./public/js/ --presets react-app/prod",
+    "jsx": "npx babel --watch ./public/js/src --out-dir ./public/js/ --presets react-app/prod",
     "scss": "sass --watch ./public/css/scss:./public/css"
   },
   "repository": {
