--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "monsite",
+  "name": "monPortFolio",
   "version": "1.0.0",
-  "description": "brickbreaker",
+  "description": "brickBreakerGame",
   "main": ".eslintrc.js",
   "scripts": {
     "test": "jest",
-    "jsx": "npx babel --watch ./public/js/src --out-dir ./public/js/ --presets react-app/prod",
     "scss": "sass --watch ./public/css/scss:./public/css"
   },
   "repository": {
@@ -15,11 +14,11 @@
   "author": "https://github.com/m1k431",
   "license": "ISC",
   "dependencies": {
-    "babel-preset-react-app": "^3.1.2",
+    "acorn": "^6.1.1",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "eslint-plugin-react": "^7.11.1",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "express-minify": "^1.0.0",
     "express-session": "^1.15.6",
     "g": "^2.0.1",
@@ -33,9 +32,6 @@
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-plugin-transform-react-pug": "^6.0.0",
-    "babel-preset-env": "^1.7.0",
     "eslint": "^5.15.3",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.13.0",
