Mongodb To DataTable listeArticle.pug

--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "acorn": "^6.1.1",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
+    "datatables.net-dt": "^1.10.19",
     "eslint-plugin-react": "^7.11.1",
     "express": "^4.16.4",
     "express-minify": "^1.0.0",
     "express-session": "^1.15.6",
     "g": "^2.0.1",
     "helmet": "^3.13.0",
+    "jquery": "^3.4.0",
+    "jsdom": "^14.0.0",
     "mongodb": "^3.1.1",
     "nodemon": "^1.18.10",
     "npm": "^6.9.0",
