--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.4.0",
     "jsdom": "^14.0.0",
     "mongodb": "^3.2.3",
+    "mysql": "^2.17.1",
     "nodemon": "^1.18.10",
     "npm": "^6.9.0",
     "path": "^0.12.7",
