***Fin trad ***Script creation db

--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "jsdom": "^14.0.0",
     "mongodb": "^3.2.3",
     "mysql": "^2.18.1",
-    "nodemon": "^1.18.10",
+    "nodemon": "^1.19.4",
     "npm": "^6.13.7",
     "path": "^0.12.7",
     "pug": "^2.0.3",
+    "sass": "^1.26.2",
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.2.0"
   },
