script "start": node index.js

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "brickBreakerGame",
   "main": ".eslintrc.js",
   "scripts": {
+    "start": "node index.js",
     "test": "jest",
     "scss": "sass --watch ./public/css/scss:./public/css"
   },
