--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "express": "^4.16.4",
     "express-minify": "^1.0.0",
     "express-session": "^1.16.1",
+    "frameguard": "^3.1.0",
     "g": "^2.0.1",
     "helmet": "^3.21.2",
-    "jquery": "^3.4.0",
+    "jquery": "^3.5.1",
     "jsdom": "^14.0.0",
     "mongodb": "^3.2.3",
     "mysql": "^2.18.1",
