--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "express-minify": "^1.0.0",
     "express-session": "^1.16.1",
     "frameguard": "^3.1.0",
+    "fs": "0.0.1-security",
     "g": "^2.0.1",
     "helmet": "^3.21.2",
     "jquery": "^3.5.1",
     "jsdom": "^14.0.0",
+    "log4js": "^6.3.0",
     "mongodb": "^3.2.3",
     "mysql": "^2.18.1",
     "nodemon": "^1.19.4",
