--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "frameguard": "^3.1.0",
     "fs": "0.0.1-security",
     "g": "^2.0.1",
+    "geoip-lite": "^1.4.2",
     "helmet": "^3.21.2",
     "jquery": "^3.5.1",
     "jsdom": "^14.0.0",
