--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "geoip-lite": "^1.4.2",
     "jquery": "^3.5.1",
     "log4js": "^6.3.0",
+    "mongodb": "^3.5.9",
     "nodemon": "^1.19.4",
     "npm": "^6.13.7",
     "pug": "^2.0.3",
