--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "pug": "^2.0.3",
     "sass": "^1.26.2",
     "serve-favicon": "^2.5.0",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "uid-safe": "^2.1.5"
   },
   "devDependencies": {},
   "bugs": {
