--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongodb": "^3.5.9",
     "nodemon": "^1.19.4",
     "npm": "^6.13.7",
+    "parseurl": "^1.3.3",
     "pug": "^2.0.3",
     "sass": "^1.26.2",
     "serve-favicon": "^2.5.0",
