--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "frameguard": "^3.1.0",
     "fs": "0.0.1-security",
     "geoip-lite": "^1.4.2",
+    "glob": "^7.1.6",
     "jquery": "^3.5.1",
     "log4js": "^6.3.0",
     "mongodb": "^3.5.9",
@@ -29,10 +30,11 @@
     "npm": "^6.13.7",
     "parseurl": "^1.3.3",
     "pug": "^2.0.3",
-    "sass": "^1.26.2",
+    "sass": "^1.26.9",
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.2.0",
-    "uid-safe": "^2.1.5"
+    "uid-safe": "^2.1.5",
+    "yargs-parser": "^18.1.3"
   },
   "devDependencies": {},
   "bugs": {
