--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fs": "0.0.1-security",
     "geoip-lite": "^1.4.2",
     "glob": "^7.1.6",
+    "helmet": "^3.23.3",
     "jquery": "^3.5.1",
     "log4js": "^6.3.0",
     "mongodb": "^3.5.9",
