--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "test": "",
-    "scss": "sass --watch ./public/css/scss:./public/css"
+    "scss": "sass --watch ./public/scss:./public/css"
   },
   "repository": {
     "type": "git",
@@ -15,6 +15,7 @@
   "author": "https://github.com/m1k431",
   "license": "ISC",
   "dependencies": {
+    "coffee-script": "^1.12.7",
     "compression": "^1.7.4",
     "express": "^4.16.4",
     "express-minify": "^1.0.0",
@@ -25,9 +26,11 @@
     "glob": "^7.1.6",
     "helmet": "^3.23.3",
     "jquery": "^3.5.1",
+    "less": "^3.12.2",
     "log4js": "^6.3.0",
     "mongodb": "^3.5.9",
     "ms": "^2.1.2",
+    "node-sass": "^4.14.1",
     "nodemon": "^1.19.4",
     "npm": "^6.14.6",
     "parseurl": "^1.3.3",
@@ -37,6 +40,7 @@
     "serve-favicon": "^2.5.0",
     "session-file-store": "^1.4.0",
     "socket.io": "^2.2.0",
+    "stylus": "^0.54.8",
     "uid-safe": "^2.1.5",
     "yargs-parser": "^18.1.3"
   },
